[metadata]
name = sim2x
description = Cornerpoint simulations to (2) something else (x)
long_description = file:README.md
long_description_content_type = text/markdown
authors = Tony Hallam
author_email = trhallam@gmail.com
url = https://github.com/trhallam/sim2x/

license=MIT
licence_files=LICENSE

readme = README.md

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    xarray
    numpy
    pandas
    scipy
    numba
    dask
    distributed
    more_itertools
    rich
    pooch
    pydantic
    pydantic_yaml
    ruamel.yaml
    eclx>=0.2
    digirock>=0.1.2
    segysak
    dataicer

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    pandas
    numpy
    xarray
    hypothesis

docs =
    mkdocs
    mkdocstrings
    mkdocs-material
    mkdocs-material-extensions
    mkdocs-simple-plugin
    mkdocs-jupyter
    mkdocs-gen-files
    mkdocs-include-markdown-plugin
    mkautodoc
    jupyterlab
    matplotlib

[options.entry_points]
console_scripts =
    sim2x = sim2x._cli._cli:main